<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="success_notification_channel_id" translatable="false">download_result_channel</string>
    <string name="success_notification_channel_name" translatable="false">Status</string>

    <string name="success_notification_channel_description" translatable="false">Download Success notification</string>


    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square,Inc</string>
</resources>
