<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">


        <ImageView
            android:id="@+id/download_image"
            android:layout_width="0dp"
            android:layout_height="196dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_cloud_download" />

        <RadioGroup
            android:id="@+id/download_radio"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_image">

            <RadioButton
                android:text="@string/glide"
                style="@style/radio_btn_style"
                 />

            <RadioButton
                android:text="@string/loadapp"
                style="@style/radio_btn_style" />

            <RadioButton
                android:text="@string/retrofit"
                style="@style/radio_btn_style" />
        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:btnColor="@color/colorPrimary"
            app:defaultText="@string/button_name"
            app:btnLoadingColor="@color/colorPrimaryDark"
            app:pacManColor="@color/colorAccent"
            app:loadingText="@string/button_loading"
            app:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>